--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,8 +17,9 @@ body {
   margin: 0;
   padding: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 *,
